LTS
update configurations.