@@ -11,7 +11,9 @@ fork := true
 javacOptions ++= Seq(
   "-source", "17", "-target", "17",  
   "--add-opens=java.base/java.nio=ALL-UNNAMED",
-  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-exports java.base/java.nio.ch=ALL-UNNAMED",
+  "--add-exports java.base/sun.nio.ch=ALL-UNNAMED"
 )
 
 // IMPORTANT : compatibilité avec libs Scala 2.13
