@@ -16,6 +16,6 @@ object SparkSessionProvider {
       //.config("spark.sql.extensions", "io.delta.sql.DeltaSparkSessionExtension")
       //.config("spark.sql.catalog.spark_catalog", "org.apache.spark.sql.delta.catalog.DeltaCatalog")
 	  .config("spark.driver.extraJavaOptions", "--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
-      .config("spark.executor.extraJavaOptions", "--add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
+      .config("spark.executor.extraJavaOptions", "--add-exports=java.base/java.nio=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED")
       .getOrCreate()
 }
